# ananke

./: .gitignore  CMakeLists.txt  conan_provider.cmake  conanfile.txt
Testing/: CMakeLists.txt  test_main.cpp
Testing/Backend/: Application_definition_generator.cpp  Peripheral_definition_generator.cpp  auxiliary_resolver.cpp  dependency_resolver.cpp  project_generator.cpp  python_script_runner.cpp  toolchain_manager.cpp
Testing/analysis/: analysis.cpp  bus_analyzer.cpp  documentation_analyzer.cpp  function_processing.cpp  hdl_ast_builder.cpp  parameter_extraction.cpp  parameter_processing.cpp  port_extraction.cpp  shunting_yard.cpp
Testing/check_files/: test_sv_module.sv  test_sv_parameter_extraction.sv  top_synth_sv.sv  top_tb_sv.sv
Testing/data_model/: Depfile_test.cpp  Expression_component.cpp  Expression_evaluator.cpp  Script_test.cpp  Token.cpp  data_store_test.cpp  hdl_resource_testing.cpp  initialization_list.cpp  settings_store_test.cpp
Testing/end_to_end/: full_application.cpp
Testing/files/: Depfile
Testing/frontend/: cache_manager.cpp  repository_walker.cpp  source_mapping.cpp  sv_preprocessor.cpp  typedef_parsing.cpp
grammars/: sv2017.g4
includes/: ananke.hpp  crash_context.hpp  main.hpp  profiler.hpp
includes/Backend/: Auxiliary_resolver.hpp  Dependency_resolver.hpp  Toolchain_manager.hpp
includes/analysis/: HDL_ast_builder_v2.hpp  control_bus_analysis.hpp  data_acquisition_analysis.hpp  loop_solver.hpp  parameter_solver.hpp  proxy_bus_analysis.hpp  topological_sorter.hpp  type_cast_engine.hpp
includes/data_model/: Constraints.hpp  DataFile.hpp  Depfile.hpp  Script.hpp  data_store.hpp  depfile_schema.hpp  hdl_file.hpp  mdarray.hpp  mm_file.hpp  scope.hpp  settings_store.hpp  source_file.hpp
includes/frontend/: Repository_walker.hpp  cache_manager.hpp
includes/mgp_sv/: CMakeLists.txt  sv2017.cpp  sv2017.h  sv2017.interp  sv2017BaseListener.cpp  sv2017BaseListener.h  sv2017BaseVisitor.cpp  sv2017BaseVisitor.h  sv2017Lexer.cpp  sv2017Lexer.h  sv2017Listener.cpp  sv2017Listener.h  sv2017Visitor.cpp  sv2017Visitor.h
includes/mgp_vh/: vhdlLexer.cpp  vhdlLexer.h  vhdlParser.cpp  vhdlParser.h  vhdlParserBaseListener.cpp  vhdlParserBaseListener.h  vhdlParserBaseVisitor.cpp  vhdlParserBaseVisitor.h  vhdlParserListener.cpp  vhdlParserListener.h  vhdlParserVisitor.cpp  vhdlParserVisitor.h
src/: CMakeLists.txt  ananke.cpp  main.cpp
src/Backend/: Auxiliary_resolver.cpp  Dependency_resolver.cpp  new_app_generator.cpp  project_generator_base.cpp
src/analysis/: HDL_ast_builder_v2.cpp  control_bus_analysis.cpp  loop_solver.cpp  (+5 more)
(+218 files in other folders)
